--- a/_assets/_css/styles.css
+++ b/_assets/_css/styles.css
@@ -124,7 +124,7 @@ a {
 	}
 }
 
-/*SAMPLE WORK*/
+/*PORTFOLIO*/
 .gallery-icon {
 	width: 300px;
 	height: 200px;
@@ -132,4 +132,13 @@ a {
 
 .galleryNav {
 	padding: 5px;
+}
+
+.thumbnail {
+	transition: 100ms ease-in-out;
+}
+
+.thumbnail:hover {
+	transform: scale(1.1);
+	cursor: pointer;
 }
